src/objects/inscor__Price__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account_Region__c</fullName>
        <label>Account Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Account_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Account_Type__c</fullName>
        <label>Account Type - RETIRED</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Prices</relationshipLabel>
        <relationshipName>Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Prices</relationshipLabel>
        <relationshipName>Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Effective__c</fullName>
        <formula>IF(  ISBLANK( inscor__Effective_Date__c )  ||  inscor__Effective_Date__c  &lt;=  TODAY()  ,true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Lead_time__c</fullName>
        <label>Lead time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Min_Quantity__c</fullName>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prices</relationshipLabel>
        <relationshipName>Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Suggested</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/OH Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/SV Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/Repairable Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Product_Line</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Segment</valueSetName>
        </valueSet>
    </fields>
    <label>Price</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Part_Master__c</columns>
        <columns>inscor__Condition_Code__c</columns>
        <columns>inscor__Price__c</columns>
        <columns>inscor__Price_Type__c</columns>
        <columns>inscor__Min_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Price Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>